package lans.hotels.domain.room;public class RoomSpecification {
}
